--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,34 @@
-alembic==1.7.5
-aniso8601==9.0.1
-attrs==21.2.0
-blinker==1.4
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.15.0
-chardet2==2.0.3
-charset-normalizer==2.0.8
-click==8.0.1
-cryptography==36.0.0
-dataclasses==0.8
-dominate==2.6.0
-Flask==2.0.1
+alembic==1.9.1
+blinker==1.5
+certifi==2022.12.7
+charset-normalizer==2.1.1
+click==8.1.3
+dnspython==2.2.1
+dominate==2.7.0
+email-validator==1.3.0
+Flask==2.2.2
 Flask-Bootstrap==3.3.7.1
-Flask-GoogleLogin==0.3.1
-Flask-Login==0.2.11
+Flask-Login==0.6.2
 Flask-Mail==0.9.1
-Flask-Migrate==3.1.0
-Flask-Moment==1.0.2
-Flask-OAuth==0.12
+Flask-Migrate==4.0.1
+Flask-Moment==1.0.5
 Flask-PageDown==0.4.0
-flask-restplus==0.13.0
-Flask-SQLAlchemy==2.5.1
-flask-util==0.0.1.dev2
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-greenlet==1.1.2
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.8.1
-importlib-resources==5.4.0
-install==1.3.4
-itsdangerous==2.0.1
-Jinja2==3.0.1
-jsonschema==3.2.0
-Mako==1.1.6
-MarkupSafe==2.0.1
-oauth2==1.9.0.post1
-oauth2client==4.1.3
-oauthlib==3.1.1
-pkg_resources==0.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pyOpenSSL==21.0.0
-pyparsing==3.0.6
-pyrsistent==0.18.0
-pytz==2021.3
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.8
-six==1.16.0
-SQLAlchemy==1.4.27
-typing-extensions==3.10.0.2
-urllib3==1.26.7
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.0.1
+gitdb==4.0.10
+GitPython==3.1.30
+idna==3.4
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.1
+packaging==22.0
+requests==2.28.1
+smmap==5.0.0
+SQLAlchemy==1.4.46
+urllib3==1.26.13
 visitor==0.1.3
-Werkzeug==2.0.1
-WTForms==3.0.0
-zipp==3.6.0
+Werkzeug==2.2.2
+WTForms==3.0.1
+zipp==3.11.0
