--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.1
 packaging==22.0
+python-dotenv==0.21.0
 requests==2.28.1
 smmap==5.0.0
 SQLAlchemy==1.4.46
