Feat: 애플리케이션을 도커에 배포하도록 코드 수정 및 Dockerfile 추가

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,8 +3,9 @@ wsgi-file = codee.py
 callable = app
 master = true
 processes = 5
+socket = :5000
 threads = 2
-socket = /tmp/uwsgi.sock 
 chmod-socket = 660
 vacuum = true
 die-on-term = true
+plugins = python3
