--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ cachetools==5.2.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
+colorama==0.4.6
+diff-match-patch==20200713
 dnspython==2.2.1
 dominate==2.7.0
 email-validator==1.3.0
@@ -26,6 +28,7 @@ google-auth==2.15.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.8.0
 googleapis-common-protos==1.57.1
+greenlet==2.0.2
 httplib2==0.21.0
 idna==3.4
 importlib-metadata==6.0.0
@@ -47,6 +50,7 @@ rsa==4.9
 six==1.16.0
 smmap==5.0.0
 SQLAlchemy==1.4.46
+tomli==2.0.1
 uritemplate==4.1.1
 urllib3==1.26.13
 URLObject==2.4.3
