--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ tomli==2.0.1
 uritemplate==4.1.1
 urllib3==1.26.13
 URLObject==2.4.3
+uWSGI==2.0.21
 visitor==0.1.3
 Werkzeug==2.2.2
 WTForms==3.0.1
