--- a/.gitignore
+++ b/.gitignore
@@ -228,6 +228,6 @@ cython_debug/
 .ionide
 
 # Support for Project snippet scope
-!.vscode/*.code-snippets
+!.vscode/*
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,flask
